# cimpl

./: .gitignore  AI_WORKFLOW.md  CHANGELOG.md  COMMIT_MESSAGE.md  Cargo.toml  DESIGN_GUIDE.md  ERROR_CODE_ENHANCEMENT.md  ERROR_MAPPER_PATTERN.md  ERROR_MAPPING_SYSTEM.md  FFI_TEMPLATE.rs  FINAL_SYNC_STATUS.md  LANGUAGE_BINDINGS.md  MACRO_PATTERNS.md  MACRO_REFERENCE.md  MACRO_SIMPLIFICATION.md  PHILOSOPHY.md  POINTER_REDESIGN.md  README.md  SIMPLIFIED_ERROR_HANDLING.md  STANDARD_C_CONVENTIONS.md  SUMMARY.md  SYNC_CHANGES.md  SYNC_SUMMARY.md  TABLE_BASED_ERROR_MAPPING.md  WRAPPING_EXTERNAL_CRATES.md  package-lock.json
c2pa-example/: Cargo.toml  README.md  SETTINGS_API.md  build.rs  cbindgen.toml
c2pa-example/bindings/python/: README.md  c2pa.py  example.py
c2pa-example/src/: lib.rs
example/: Cargo.toml  Makefile  PATTERNS.md  QUICKSTART.md  README.md  build.rs  cbindgen.toml  compile_flags.txt  demo.sh  example.c
example/src/: lib.rs
examples/: Cargo.toml  README.md
examples/reference/: Cargo.toml  build.rs  cbindgen.toml
examples/reference/bindings/python/: README.md  example.py  secret.py  value_converter.py
examples/reference/src/: ffi.rs  lib.rs
examples/src/: lib.rs
examples/uuid/: CHALLENGE_COMPLETE.md  Cargo.toml  README.md  UPDATE_NOTES.md  build.rs  cbindgen.toml
examples/uuid/bindings/python/: example.py  uuid_ffi.py
examples/uuid/src/: ffi.rs  lib.rs
reference-example/: build.rs  cbindgen.toml
reference-example/bindings/python/: test.py
reference-example/src/: lib.rs
src/: cimpl_error.rs  error.rs  lib.rs  macros.rs  utils.rs
stream-example/: Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  demo.sh  example  example.c  test_output.txt
stream-example/bindings/python/: README.md  cimpl_stream.py  example.py
stream-example/src/: lib.rs
uuid-example/: AI_GENERATION_GUIDE.md  BINDING_ORGANIZATION.md  CLEAN_IMPLEMENTATION.md  Cargo.toml  EXTERNAL_CRATE_EXAMPLE.md  Makefile  NODEJS_SUCCESS.md  NODE_BINDINGS.md  README.md  STATUS.md  build.rs  cbindgen.toml  example  example.c  test_all.sh  uuid.lua
uuid-example/bindings/: README.md
uuid-example/bindings/c/: README.md  compile_flags.txt  example.c
uuid-example/bindings/cpp/: Makefile  README.md  compile_flags.txt  example  example.cpp  uuid.cpp  uuid.hpp
uuid-example/bindings/lua/: README.md  test.lua  uuid_bindings.lua
uuid-example/bindings/nodejs/: README.md  package-lock.json  package.json  test.js  test_ffi-napi.js.deprecated  uuid_bindings.js  uuid_ffi-napi.js.deprecated
uuid-example/bindings/python/: README.md  test.py  uuid_bindings.py
uuid-example/src/: lib.rs
