[package]
name = "cimpl"
version = "0.1.0"
description = "Simple C implementations from Rust - FFI utilities and macros for creating safe, ergonomic C bindings"
edition = "2021"
authors = ["Gavin Peacock <gpeacock@adobe.com>"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/gpeacock/cimpl"
keywords = ["ffi", "bindings", "c", "utilities", "macros"]
categories = ["api-bindings", "development-tools::ffi"]

[dependencies]
paste = "1.0"

[dev-dependencies]
