[package]
name = "cimpl-reference"
version = "0.1.0"
edition = "2021"

[lib]
name = "value_converter"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["ffi"]
ffi = []

[dependencies]
cimpl = { path = "../..", optional = false }
thiserror = "2.0"

[build-dependencies]
cbindgen = "0.27"
