[package]
name = "uuid_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "uuid_ffi"
crate-type = ["cdylib", "rlib"]

[features]
default = ["ffi"]
ffi = []

[dependencies]
cimpl = { path = "../.." }
uuid = { version = "1.11", features = ["v4"] }
thiserror = "2.0"

[build-dependencies]
cbindgen = "0.27"
